--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "build-scripts": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "sequelize": "^6.30.0"
